--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 
-<a href="moreFunHouse://">moreFunHouse</a>
+<a href="morefunhouse://">moreFunHouse</a>
 
 <a href="http://www.newsoft.com">newsoft</a>
+
+<a href="https://itunes.apple.com/us/app/魔髮部屋科技假髮-髮型模擬/id1054643458?l=zh&ls=1&mt=8">魔髮部屋</a>
